# msvc_charptr_test

./: CMakeLists.txt  README.md  main.cpp
